@@ -1,5 +1,6 @@
 
 
+Sep 20     7    PM
 Sep 20     1:15 PM      3:15 PM     2          8.75
 Sep 19     4:15 PM      6:45 PM     1.5        6.75
 Sep 19     1:45 PM      3:30 PM     1.75       5.25
