@@ -1,9 +1,9 @@
-<% if logged_in? -%>
 <div id="tabs">
   <ul class="collapsed menu">
-    <li class="first"><%= link_to 'Home', home_url %></li>
+    <li class="first"><%= link_to 'Results', front_url %></li>
     <li><%= link_to 'People', people_url %></li>
+<% if logged_in? -%>
     <li><%= link_to 'My Targets', my_targets_url %></li>
+<% end -%>
   </ul>
 </div>
-<% end -%>
