@@ -1,4 +1,7 @@
 <div>
+<% if @target.results.size < 1 -%>
+  No results yet
+<% else -%>
   <table class="bordered">
     <tr class="header">
       <td>Submitted</td>
@@ -9,7 +12,7 @@
       <td>Errors</td>
       <td></td>
     </tr>
-<% for result in @target.results -%>
+<%   for result in @target.results -%>
     <tr>
       <td><%=h format_datetime(result.created_at) %></td>
       <td class="count"><%=h result.files_count %></td>
@@ -19,6 +22,7 @@
       <td class="count"><%=h result.errors_count %></td>
       <td><%= public_link_result(result,"More") %></td>
     </tr>
-<% end -%>
+<%   end -%>
   </table>
+<% end -%>
 </div>
