@@ -1,5 +1,6 @@
 
 Sep 20
+- use table for My Targets
 - icon with rough-cut Ruby
 - About page
 = change default time zone to UTC
